# RCF-MathWorks-2020-14

./: .gitignore  README.md
catkin_ws/src/control/: CMakeLists.txt  control.cpp  control.h  control_data.cpp  control_private.h  control_types.h  ert_main.cpp  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
catkin_ws/src/ekf/: CMakeLists.txt  ekf.cpp  ekf.h  ekf_data.cpp  ekf_private.h  ekf_types.h  ert_main.cpp  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
catkin_ws/src/justina_control/: CMakeLists.txt  ert_main.cpp  justina_control.cpp  justina_control.h  justina_control_data.cpp  justina_control_private.h  justina_control_types.h  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
catkin_ws/src/justina_ekf/: CMakeLists.txt  MW_custom_RTOS_header.h  ert_main.cpp  justina_ekf.cpp  justina_ekf.h  justina_ekf_data.cpp  justina_ekf_private.h  justina_ekf_types.h  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
catkin_ws/src/justina_manipulator/: CMakeLists.txt  ert_main.cpp  ex_04d5441d.c  ex_316a81de.c  ex_36012fa7.c  ex_47b11894.c  ex_57660158.c  ex_79d100f1.c  ex_98d223a6.c  ex_b2b40ad5.c  ex_bb0efd4b.c  ex_d9d686a8.c  ex_debffef2.c  ex_f6bb4c2d.c  ex_f866102d.c  justina_manipulator.cpp  justina_manipulator.h  justina_manipulator_5aaa3abb_1.c  justina_manipulator_5aaa3abb_1.h  justina_manipulator_5aaa3abb_1_asm_delegate.c  (+201 more)
catkin_ws/src/manipulator/: CMakeLists.txt  _nesl_rtw.h  ert_main.cpp  ex_04d5441d.c  ex_136645f8.c  ex_17bc61ac.c  ex_18b4440a.c  ex_2ebcd5b2.c  ex_316a81de.c  ex_40d5be33.c  ex_47b11894.c  ex_690b7cd0.c  ex_8a6fc761.c  ex_debffef2.c  ex_e40d74b8.c  external_std.h  manipulator.cpp  manipulator.h  manipulator_5aaa3abb_1.c  manipulator_5aaa3abb_1.h  manipulator_5aaa3abb_1_asm_delegate.c  manipulator_5aaa3abb_1_asserts.c  manipulator_5aaa3abb_1_checkDynamics.c  manipulator_5aaa3abb_1_create.c  manipulator_5aaa3abb_1_deriv.c  manipulator_5aaa3abb_1_gateway.c  manipulator_5aaa3abb_1_gateway.h  manipulator_5aaa3abb_1_geometries.c  manipulator_5aaa3abb_1_geometries.h  manipulator_5aaa3abb_1_mode_zero_crossings.c  manipulator_5aaa3abb_1_output.c  manipulator_5aaa3abb_1_setParameters.c  manipulator_5aaa3abb_1_sim_delegate.c  manipulator_data.cpp  manipulator_private.h  manipulator_types.h  mc_026e4f4b.c  mc_03b98f6f.c  mc_0764157d.c  mc_0d6fd085.c  (+279 more)
matlab_files/justina_arm/: Justina_Readme.txt  control.slx  description.urdf  ekf.slx  full_system.slx  justina_control.slx  justina_ekf.slx  justina_full_system.slx  justina_manipulator.slx  justina_rigid_body_tree.mat  justina_smo.slx  manipulator.slx  smo.slx
matlab_files/katana/: Katana_Readme.txt  katana_control.slx  katana_full_system.slx  katana_manipulator.slx  katana_rigid_body_tree.mat  katana_smo.slx
(+310 files in other folders)
